--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:postgresql://postgresqldb:5432/lesson
+spring.datasource.url=jdbc:postgresql://postgresqldb:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=postgres
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
